--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -168,7 +168,16 @@
             </div>
             <div class="nav-item"><a href="<%= contacts_path %>" class="nav-link"><%= t('.contacts') %></a></div>
           </div>
-
+                   <div class="d-none d-lg-block">
+              <% if I18n.locale == :en %>
+              <%= button_to url_for(locale: :ru) do %><class="btn btn-outline-secondary mr-1">RU<i class="fa fa-users">
+             <% end %> 
+             <% else %>
+            <%= button_to url_for(locale: :en) do %><class="btn btn-outline-secondary mr-1">EN</span><i class="fa fa-users">
+             <% end %> 
+             <% end %>
+          </div>
+        </div>
         <!-- /.nav-collapse-->
       </div>
     </nav>
