--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -370,9 +370,9 @@ $(document).ready(function(){
             <div class="row">
               <div class="col-md-12">
                 <div class="icon icon-lg"><i class="fa fa-file-code-o"></i></div>
-                <h1>Do you want to see more?</h1>
-                <p class="lead">Molded plastic stand for chocolate , for 2 types , with sticker ,  silk-screen printing</p>
-                <p class="text-center"><a href="<%= gallery_path %>" class="btn btn-outline-white-primary">See latest gallery </a></p>
+                <h1><%= t('.seemore') %></h1>
+                <p class="lead"><%= t('.chocolate') %></p>
+                <p class="text-center"><a href="<%= gallery_path %>" class="btn btn-outline-white-primary"><%= t('.2_gallery_s') %></a></p>
               </div>
             </div>
           </div>
@@ -384,8 +384,8 @@ $(document).ready(function(){
           _________________________________________________________
           -->
           <div class="box text-center">
-            <h3 class="text-uppercase">From our blog</h3>
-            <p class="text-italic text-large">Find us on social media <span class="accent">Check our blog!</span></p>
+            <h3 class="text-uppercase"><%= t('.blog') %></h3>
+            <p class="text-italic text-large"><%= t('.socialm') %><span class="accent"><a href="https://www.facebook.com/RkraftManufacturing/"><%= t('.socialc') %></a></span></p>
           </div>
           <div id="blog-homepage" class="row">
             <div class="col-sm-6">
