--- a/app/views/main/home.html.erb
+++ b/app/views/main/home.html.erb
@@ -45,24 +45,21 @@
     <div class="carousel-item active">
       <img src="<%= asset_path 'box1.jpg' %>" alt="lunchbox">
       <div class="carousel-caption">
-        <h3>Lunch-boxes</h3>
-        <p>Molding</p>
+        <h3><%= t('.carousel1') %></h3>
       </div>
     </div>
 
     <div class="carousel-item">
       <img src="<%= asset_path 'suchiboxx.jpg' %>" alt="clamshell">
       <div class="carousel-caption">
-        <h3>Suchi-boxes</h3>
-        <p>Molding</p>
+        <h3><%= t('.carousel2') %></h3>
       </div>
     </div>
 
     <div class="carousel-item">
       <img src="<%= asset_path 'shelforg.jpg' %>" alt="shelforganizer">
       <div class="carousel-caption">
-        <h3>Molded trays</h3>
-        <p>Molding</p>
+        <h3><%= t('.carousel3') %></h3>
       </div>
     </div>
   </div>
@@ -390,20 +387,20 @@ $(document).ready(function(){
           <div id="blog-homepage" class="row">
             <div class="col-sm-6">
               <div class="post">
-                <h4><a href="#">Trade equipment products</a></h4>
-                <p class="author-category">By <a href="#">Catalog</a> in <a href="">Our style</a></p>
+                <h4><a href="#"><%= t('.trade') %></a></h4>
+                <p class="author-category">For <a href="#"><%= t('layouts.application.catalog') %></a> in <a href="">Our style</a></p>
                 <hr>
-                <p class="intro">We produce custom prodmotional and trade equipment for shops and brand promotion for about 15 years. We combine plastic production technologies and different branding technics to meet your needs.</p>
-                <p class="read-more"><a href="<%= acryllic_path %>" class="btn btn-outline-primary">Continue reading</a></p>
+                <p class="intro"><%= t('.tradeblog') %></p>
+                <p class="read-more"><a href="<%= acryllic_path %>" class="btn btn-outline-primary"><%= t('.read') %></a></p>
               </div>
             </div>
             <div class="col-sm-6">
               <div class="post">
-                <h4><a href="#">Custom plastic packaging production</a></h4>
-                <p class="author-category">Custom <a href="<%= clamshells_path %>">Plastic Packaging</a> in <a href="">About Us</a></p>
+                <h4><a href="#"><%= t('.package') %></a></h4>
+                <p class="author-category">For <a href="<%= clamshells_path %>"><%= t('layouts.application.clamshells') %></a> in <a href="">About Us</a></p>
                 <hr>
-                <p class="intro">We have rich experience in plastic packaging production for foods, candies, retail, householding goods, hardware, fasteners of PET, PVC, PP, HIPS , with thickness of material from 0,2 to 2 mm. We have facilities and knowledge to support and provide quality for customized plastic packaging. We made customized plastic packaging of all types, starting with 3d-model prototyping, picking material, building пресс-форму and then molding products. </p>
-                <p class="read-more"><a href="<%= clamshells_path %>" class="btn btn-outline-primary">Continue reading</a></p>
+                <p class="intro"><%= t('.package_p') %></p>
+                <p class="read-more"><a href="<%= clamshells_path %>" class="btn btn-outline-primary"><%= t('.read') %></a></p>
               </div>
             </div>
           </div>
@@ -422,60 +419,60 @@ $(document).ready(function(){
         <div class="container">
           <div class="row">
             <div class="col-lg-3 col-md-6">
-              <h4>Pages</h4>
+              <h4><%= t('.pages') %></h4>
               <ul>
-                <li><a href="#">About us</a></li>
-                <li><a href="#">Adresses</a></li>
+                <li><a href="<%= contacts_path %>"><%= t('.aboutus') %></a></li>
+                <li><a href="<%= contacts_path %>"><%= t('.addresses') %></a></li>
                 <li><a href="#">FAQ</a></li>
-                <li><a href="<%= contacts_path %>">Contact us</a></li>
+                <li><a href="<%= contacts_path %>"><%= t('.contactus') %></a></li>
               </ul>
              
-              <h4>User section</h4>
+              <h4><%= t('.user_section') %></h4>
               <ul>
-                <li><a href="<%= new_user_session_path %>">Login</a></li>
-                <li><a href="<%= new_user_registration_path %>">Register</a></li>
+                <li><a href="<%= new_user_session_path %>"><%= t('layouts.application.sign_up') %></a></li>
+                <li><a href="<%= new_user_registration_path %>"><%= t('layouts.application.log_in') %></a></li>
               </ul>
             
             </div>
             <!-- /.col-lg-3-->
-                      <h3>Catalog</h3>
+                      <h3><%= t('.catalog') %></h3>
                       <ul>
-                        <li><a href="#">Acryllic Stands</a></li>
-                        <li><a href="<%= racks_path %>">Metal Stands</a></li>
-                        <li><a href="#">Molded Displays</a></li>
-                        <li><a href="#">Clamshells</a></li>
+                        <li><a href="<%= acryllic_path %>"><%= t('layouts.application.acryllic') %></a></li>
+                        <li><a href="<%= racks_path %>"><%= t('layouts.application.metal') %></a></li>
+                        <li><a href="<%= mold_path %>"><%= t('layouts.application.mold') %></a></li>
+                        <li><a href="#"><%= t('layouts.application.clamshells') %></a></li>
                       </ul>
                     </div>
                     <div class="col-sm-4 col-lg-3">
-                      <h3>Additional</h3>
+                      <h3><%= t('layouts.application.additional') %></h3>
                       <ul>
-                        <li><a href="#">POS clamshells</a></li>
-                        <li><a href="#">Blinks and Lighting</a></li>
-                        <li><a href="#">Shelftalkers</a></li>
-                        <li><a href="#">Accessories</a></li>
+                        <li><a href="<%= moldshell_path %>"><%= t('layouts.application.moldshell') %></a></li>
+                        <li><a href="#"><%= t('layouts.application.lighting') %></a></li>
+                        <li><a href="<%= moldshell_path %>"><%= t('layouts.application.shelftalkers') %></a></li>
+                        <li><a href="#"><%= t('layouts.application.accesories') %></a></li>
                       </ul>
                     </div>
                     <div class="col-sm-4 col-lg-3">
-                      <h3>Servives</h3>
+                      <h3><%= t('layouts.application.services') %></h3>
                       <ul>
-                        <li><a href="#">Design</a></li>
-                        <li><a href="#">Constructing</a></li>
-                        <li><a href="#">3D Modelling</a></li>
-                        <li><a href="#">Consulting</a></li>
+                        <li><a href="<%= services_path %>"><%= t('layouts.application.design') %></a></li>
+                        <li><a href="<%= services_path %>"><%= t('layouts.application.constructing') %></a></li>
+                        <li><a href="<%= services_path %>"><%= t('layouts.application.3dmodelling') %></a></li>
+                        <li><a href="<%= services_path %>"><%= t('layouts.application.consulting') %></a></li>
                       </ul>
                     </div>
                   </div>
                 </div>
             <!-- /.col-lg-3-->
            
-              <h4>Get the news</h4>
+              <h4><%= t('.subscription') %></h4>
             </div>
               <div class="col-lg-3 col-md-6">
               <div class="form-holder">
              <%= form_for(@subscription, path: '/subscriptions', method: :post) do |f| %>
                 <div class="form-group">
-                  <%= f.email_field :email, placeholder: 'Type your email address' %>
-                  <%= f.button 'Subscribe', class: 'submit', type: 'submit' %>
+                  <%= f.email_field :email, placeholder: t('.subsmail') %>
+                  <%= f.button t('.subscribe'), class: 'submit', type: 'submit' %>
                   
                   <% end %>
                   </div>
