application layout, i18n button changes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,22 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+      <head>
+
+    <meta charset="utf-8">
+    <meta name="robots" content="all,follow">
+    <meta name="googlebot" content="index,follow,snippet,archive">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="">
+    <!-- Bootstrap CSS-->
+   
+    <!-- Google fonts - Montserrat and Merriweather-->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Merriweather:400,400italic" rel="stylesheet" type="text/css">
+
+
+    <!-- Font Awesome css-->
+    <link rel="shortcut icon" href="favicon.png">
+  </head>
     
   <%= stylesheet_link_tag 'carousel.css', media: 'print, screen' %>
   <%= javascript_include_tag('jquery.js') %>
@@ -168,16 +184,7 @@
             </div>
             <div class="nav-item"><a href="<%= contacts_path %>" class="nav-link"><%= t('.contacts') %></a></div>
           </div>
-                   <div class="d-none d-lg-block">
-              <% if I18n.locale == :en %>
-              <%= button_to url_for(locale: :ru) do %><class="btn btn-outline-secondary mr-1">RU<i class="fa fa-users">
-             <% end %> 
-             <% else %>
-            <%= button_to url_for(locale: :en) do %><class="btn btn-outline-secondary mr-1">EN</span><i class="fa fa-users">
-             <% end %> 
-             <% end %>
-          </div>
-        </div>
+                   
         <!-- /.nav-collapse-->
       </div>
     </nav>
