--- a/app/views/main/contacts.html.erb
+++ b/app/views/main/contacts.html.erb
@@ -7,12 +7,12 @@
       <div class="container">
         <div class="breadcrumbs">
           <ul class="breadcrumb">
-            <li><a href="<%= home_path %>">Home</a></li>
+            <li><a href="<%= home_path %>"><%= t('layouts.application.home') %></a></li>
            
           </ul>
         </div>
         <h1 class="heading"></h1>
-        <p class="lead">We will like to hear from you.  </p>
+        <p class="lead"><%= t('.like') %></p>
       </div>
     </section>
     <section>  
@@ -21,18 +21,18 @@
           <div class="col-lg-4">
             <div class="box-simple">
               <div class="icon"><i class="pe-7s-map-2"></i></div>
-              <h4 class="heading margin-bottom">Address</h4>
-              <p><br>Kyiv<br>Ukraine </p>
+              <h4 class="heading margin-bottom"><%= t('.address') %></h4>
+              <p><br><%= t('.kyiv') %><br><%= t('.ukraine')%></p>
             </div>
             <div class="box-simple">
               <div class="icon"><i class="pe-7s-phone"></i></div>
-              <h4 class="heading margin-bottom">Call center</h4>
+              <h4 class="heading margin-bottom"><%= t('.contact') %></h4>
               <p class="text-muted"></p>
-              <p><strong>+38 066 289 91 33</strong></p>
+              <p><strong>+38(066)289-91-33, <br> +38(063)561-87-23, <br> telegram, viber <br> ritz.rkraft@gmail.com </strong></p>
             </div>
             <div class="box-simple">
               <div class="icon"><i class="pe-7s-mail-open"></i></div>
-              <h4 class="heading margin-bottom">Send your quotes on email</p>
+              <h4 class="heading margin-bottom"><%= t('.enqmail') %></p>
               <ul>
                 <li><a href="mailto:">ritz.rkraft@gmail.com</a></li>
               
@@ -41,7 +41,7 @@
           </div>
           <div class="col-lg-7 col-lg-offset-1">
             <div class="icon"><i class="pe-7s-pen"></i></div>
-            <h4 class="heading margin-bottom">Contact form</h4>
+            <h4 class="heading margin-bottom"><%= t('.inqform') %></h4>
             <p class="text-muted">Place your inquiry here</p>
             <div class="form-holder">
               <%= form_for(@inquiry, path: '/inquiries', method: :post) do |f| %>
