--- a/app/views/main/contacts.html.erb
+++ b/app/views/main/contacts.html.erb
@@ -42,44 +42,44 @@
           <div class="col-lg-7 col-lg-offset-1">
             <div class="icon"><i class="pe-7s-pen"></i></div>
             <h4 class="heading margin-bottom"><%= t('.inqform') %></h4>
-            <p class="text-muted">Place your inquiry here</p>
+            <p class="text-muted"><%= t('.place') %></p>
             <div class="form-holder">
               <%= form_for(@inquiry, path: '/inquiries', method: :post) do |f| %>
                 <div class="row">
                 <div class="col-sm-6">
                  
-                    <label for="firstname">First name</label>
-                    <%= f.text_field :first_name, placeholder: "First name" %>
+                    <label for="firstname"><%= t('.first_name') %></label>
+                    <%= f.text_field :first_name, placeholder: t('.first_name') %>
                   </div>
                 </div>
                 <div class="col-sm-6">
                   
-                    <label for="secondname">Last name</label>
-                    <%= f.text_field :second_name, placeholder: "Last name" %>
+                    <label for="secondname"><%= t('.last_name') %></label>
+                    <%= f.text_field :second_name, placeholder: t('.last_name') %>
                   
                 </div>
                 <div class="col-sm-6">
                  
                     <label for="email">Email</label>
-                    <%= f.email_field :email, placeholder: "Type your email address" %>
+                    <%= f.email_field :email, placeholder: t('.mailing') %>
                     
                   
                 </div>
                 <div class="col-sm-6">
                   
-                    <label for="subject">Subject</label>
-                    <%= f.text_field :subject, placeholder: "Subject" %>
+                    <label for="subject"><%= t('.subject') %></label>
+                    <%= f.text_field :subject, placeholder: t('.subject') %>
                   
                 </div>
                 <div class="col-sm-12">
                   
-                    <label for="message">Message</label>
-                    <%= f.text_field :message, placeholder: "Write inquiring details here" %>
+                    <label for="message"><%= t('.message') %></label>
+                    <%= f.text_field :message, placeholder: t('.details') %>
                  
                 </div>
                 <div class="col-sm-12">
                    <div class="form-group">
-                  <%= f.button 'Submit', class: 'submit', type: 'submit' %>
+                  <%= f.button t('.submit'), class: 'submit', type: 'submit' %>
                   <% end %>
                 </div>
               </div>
@@ -99,8 +99,8 @@
         <div class="container">
           <div class="row">
             <div class="col-md-8 col-sm-12">
-              <h4 class="heading">About Us </h4>
-              <p>We develop and produce plastic packaging of any shape and complexity, for a wide range of goods, containers, lunch boxes, sushi boxes.  Our production is characterized by an individual approach, we can select the optimal form of packaging material, attractive and optimized design, with your company logo.  </p>
+              <h4 class="heading"><%= t('.about') %></h4>
+              <p><%= t('.about_p') %></p>
             </div>
             
 
