--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,8 +62,8 @@
                     <div class="col-sm-4 col-lg-3">
                       <h3><%= t('.catalog') %></h3>
                       <ul>
-                        <li><a href="<%= 'acryllic' %>"><%= t('.acryllic') %></a></li>
-                        <li><a href="<%= 'racks' %>"><%= t('.metal') %></a></li>
+                        <li><a href="<%= acryllic_path %>"><%= t('.acryllic') %></a></li>
+                        <li><a href="<%= racks_path %>"><%= t('.metal') %></a></li>
                         <li><a href="<%= mold_path %>"><%= t('.mold') %></a></li>
                         <li><a href="<%= clamshells_path %>"><%= t('.clamshells') %></a></li>
                       </ul>
