--- a/app/views/main/contacts.html.erb
+++ b/app/views/main/contacts.html.erb
@@ -61,7 +61,7 @@
                 <div class="col-sm-6">
                  
                     <label for="email">Email</label>
-                    <%= f.email_field :email, placeholder: t('.mailing') %>
+                    <%= f.email_field :email, placeholder: t('.mailin') %>
                     
                   
                 </div>
