--- a/app/views/main/gallery.html.erb
+++ b/app/views/main/gallery.html.erb
@@ -22,7 +22,7 @@
                 <!-- /.image-->
                 <div class="text">
                   <h3><a href="#"><%= t('main.home.popup') %></a></h3>
-                  <p class="price">$ 0.44</p>
+                  <p class="price"></p>
                 </div>
                 <!-- /.text-->
               </div>
@@ -63,7 +63,7 @@
                 </div>
                 <!-- /.image-->
                 <div class="text">
-                  <h3><a href="detail.html">Clamshell</a></h3>
+                  <h3><a href="detail.html"><%= </a></h3>
                                 </div>
                 <!-- /.text-->
               </div>
