--- a/app/views/main/gallery.html.erb
+++ b/app/views/main/gallery.html.erb
@@ -22,7 +22,7 @@
                 <!-- /.image-->
                 <div class="text">
                   <h3><a href="#"><%= t('main.home.popup') %></a></h3>
-                  <p class="price">$ 0.44</p>
+                  <p class="price"></p>
                 </div>
                 <!-- /.text-->
               </div>
@@ -58,12 +58,12 @@
             </div>
             <div class="col-md-3 col-sm-4">
               <div class="product">
-                <div class="image"><a href="<%= products_path %>"><img src="<%= asset_path 'blp.png' %>" alt="" class="img-fluid image1"></a>
+                <div class="image"><a href="<%= products_path %>"><img src="<%= asset_path 'db33.jpg' %>" alt="" class="img-fluid image1"></a>
                   <div class="quick-view-button"><a href="#" data-toggle="modal" data-target="#product-quick-view-modal" class="btn btn-outline-white-secondary btn-sm"><%= t('main.home.qview') %></a></div>
                 </div>
                 <!-- /.image-->
                 <div class="text">
-                  <h3><a href="detail.html">Clamshell</a></h3>
+                  <h3><a href="detail.html"><%= t('.suchibox') %></a></h3>
                                 </div>
                 <!-- /.text-->
               </div>
@@ -72,11 +72,11 @@
             <div class="col-md-3 col-sm-4">
               <div class="product">
                 <div class="image"><a href="<%= products_path %>"><img src="<%= asset_path 'lightbox.jpg' %>" alt="" class="img-fluid image1"></a>
-                  <div class="quick-view-button"><a href="#" data-toggle="modal" data-target="#product-quick-view-modal" class="btn btn-outline-white-secondary btn-sm">View</a></div>
+                  <div class="quick-view-button"><a href="#" data-toggle="modal" data-target="#product-quick-view-modal" class="btn btn-outline-white-secondary btn-sm"><%= t('.zview') %></a></div>
                 </div>
                 <!-- /.image-->
                 <div class="text">
-                  <h3><a href="#">Lightbox</a></h3>
+                  <h3><a href="#"><%= t('.lightbox') %></a></h3>
                  
                   
                 </div>
@@ -89,11 +89,11 @@
             <div class="col-md-3 col-sm-4">
               <div class="product">
                 <div class="image"><a href="<%= products_path %>"><img src="<%= asset_path 'tray_chocolate.jpg' %>" alt="" class="img-fluid image1"></a>
-                  <div class="quick-view-button"><a href="#" data-toggle="modal" data-target="#product-quick-view-modal" class="btn btn-outline-white-secondary btn-sm">View</a></div>
+                  <div class="quick-view-button"><a href="#" data-toggle="modal" data-target="#product-quick-view-modal" class="btn btn-outline-white-secondary btn-sm"><%= t('.zview') %></a></div>
                 </div>
                 <!-- /.image-->
                 <div class="text">
-                  <h3><a href="#">Molded tray</a></h3>
+                  <h3><a href="#"><%= t('.moldtray') %></a></h3>
                  
                 </div>
                 <!-- /.text-->
@@ -105,11 +105,11 @@
             <div class="col-md-3 col-sm-4">
               <div class="product">
                 <div class="image"><a href="<%= products_path %>"><img src="<%= asset_path 'acrdyspl.jpg' %>" alt="" class="img-fluid image1"></a>
-                  <div class="quick-view-button"><a href="#" data-toggle="modal" data-target="#product-quick-view-modal" class="btn btn-outline-white-secondary btn-sm">View</a></div>
+                  <div class="quick-view-button"><a href="#" data-toggle="modal" data-target="#product-quick-view-modal" class="btn btn-outline-white-secondary btn-sm"><%= t('.zview') %></a></div>
                 </div>
                 <!-- /.image-->
                 <div class="text">
-                  <h3><a href="<%= products_path %>">Acryllic Display</a></h3>
+                  <h3><a href="<%= products_path %>"><%= t('main.home.display') %></a></h3>
                  
                 </div>
                 <!-- /.text-->
@@ -121,11 +121,11 @@
             <div class="col-md-3 col-sm-4">
               <div class="product">
                 <div class="image"><a href="<%= products_path %>"><img src="<%= asset_path 'metal_rack.jpg' %>" alt="" class="img-fluid image1"></a>
-                  <div class="quick-view-button"><a href="#" data-toggle="modal" data-target="#product-quick-view-modal" class="btn btn-outline-white-secondary btn-sm">View</a></div>
+                  <div class="quick-view-button"><a href="#" data-toggle="modal" data-target="#product-quick-view-modal" class="btn btn-outline-white-secondary btn-sm"><%= t('.zview') %></a></div>
                 </div>
                 <!-- /.image-->
                 <div class="text">
-                  <h3><a href="detail.html">Metal Rack</a></h3>
+                  <h3><a href="detail.html"><%= t('.metalrack') %></a></h3>
                  
                 </div>
                 <!-- /.text-->
