i18n of model content on db and view

--- a/app/views/products/_index.html.erb
+++ b/app/views/products/_index.html.erb
@@ -1,7 +1,7 @@
 <div class="center jumbotron">
 <p id="notice"><%= notice %></p>
 
-<h1><strong>Products</strong></h1>
+<h1><strong><%= t('.title') %></strong></h1>
 
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <thead style="background color: #e0f8f8">
@@ -12,25 +12,40 @@
     <%= image_tag(product.image_url, class: 'list_image') %>
   </td>
 
+
+  <% if I18n.locale == :en %>
+
    <td class="list_description">
      <dl>
        <dt><%= product.title %></dt>
        <dd><%= truncate(strip_tags(product.description), length:80) %></dd>
      </dl>
     </td>
+    <td class= "price_line">
+      <span class="price"><%= number_to_currency(product.price) %></span>
+      <% else %>
+     <td class="list_description">
+     <dl>
+       <dt><%= product.title_ru %></dt>
+       <dd><%= truncate(strip_tags(product.description_ru), length:80) %></dd>
+     </dl>
+    </td>
+     <td class= "price_line">
+      <span class="price"><%= number_to_currency(product.price_ru) %></span>
+      <% end %>
+     <%= button_to t('.add_html'), line_items_path(product_id: product) %>
+   </td>
 
     <td class="list actions">
       <%= link_to 'Show Product', product %><br/>
       <%= link_to 'Edit Product', edit_product_path(product) %><br/>
       <%= link_to 'Delete Product', product, method: :delete, data: { confirm: 'Are you sure?'} %>
     </td>
-    <td class= "price_line">
-      <span class="price"><%= number_to_currency(product.price) %></span>
-    <%= button_to 'Add to Cart', line_items_path(product_id: product) %>
-  </td>
+ 
   </tr>
   <% end %>
 </table>
 
 
 <%= link_to 'New Product', new_product_path %>
+
