--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -11,6 +11,9 @@
    <td> 
     <%= image_tag(product.image_url, class: 'list_image') %>
   </td>
+ 
+  
+  <% if I18n.locale == :en %>
 
    <td class="list_description">
      <dl>
@@ -18,21 +21,34 @@
        <dd><%= truncate(strip_tags(product.description), length:80) %></dd>
      </dl>
     </td>
+    <td class= "price_line">
+      <span class="price"><%= number_to_currency(product.price) %></span>
+      <% else %>
+     <td class="list_description">
+     <dl>
+       <dt><%= product.title_ru %></dt>
+       <dd><%= truncate(strip_tags(product.description_ru), length:80) %></dd>
+     </dl>
+    </td>
+     <td class= "price_line">
+      <span class="price"><%= number_to_currency(product.price_ru) %></span>
+      <% end %>
+    <%= button_to t('.add_html'),
+     line_items_path(product_id: product, locale: I18n.locale),
+remote: true %>
+</td>
 
     <td class="list actions">
       <%= link_to 'Show Product', product %><br/>
       <%= link_to 'Edit Product', edit_product_path(product) %><br/>
       <%= link_to 'Delete Product', product, method: :delete, data: { confirm: 'Are you sure?'} %>
     </td>
-    <td class= "price_line">
-      <span class="price"><%= number_to_currency(product.price) %></span>
-      <%= button_to t('.add_html'),
-     line_items_path(product_id: product, locale: I18n.locale),
-remote: true %>
-  </td>
+ 
   </tr>
   <% end %>
 </table>
 
 
 <%= link_to 'New Product', new_product_path %>
+
+
